--- a/crypto/XGBoost_visualisations.ipynb
+++ b/crypto/XGBoost_visualisations.ipynb
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "#from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "import xgboost as xgb\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
@@ -64,41 +65,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grid_search(X_train_scaled, X_test_scaled, y_train, y_test):\n",
+    "\n",
+    "def randomized_search(X_train_scaled, X_test_scaled, y_train, y_test):\n",
     "    # Define the XGBoost regressor\n",
     "    xgb_model = xgb.XGBRegressor(objective='reg:squarederror', eval_metric='rmse')\n",
-    "    param_grid = {\n",
-    "    'n_estimators': [50, 100, 200],  # Number of boosting rounds\n",
-    "    'learning_rate': [0.01, 0.1, 0.2],  # Learning rate\n",
-    "    'max_depth': [3, 5, 7],  # Maximum depth of trees\n",
-    "    'min_child_weight': [1, 3, 5],  # Minimum sum of instance weight for child nodes\n",
-    "    'subsample': [0.8, 1.0],  # Fraction of samples used for training each tree\n",
-    "    'colsample_bytree': [0.8, 1.0],  # Fraction of features used for training each tree\n",
-    "    'gamma': [0, 0.1, 0.2]  # Minimum loss reduction required to make a further partition\n",
+    "\n",
+    "    # Define the parameter grid for randomized search\n",
+    "    param_dist = {\n",
+    "        'n_estimators': [50, 100, 200],  # Number of boosting rounds\n",
+    "        'learning_rate': [0.01, 0.05, 0.1, 0.2],  # Learning rate\n",
+    "        'max_depth': [3, 5, 7, 9],  # Maximum depth of trees\n",
+    "        'min_child_weight': [1, 3, 5],  # Minimum sum of instance weight for child nodes\n",
+    "        'subsample': [0.7, 0.8, 0.9, 1.0],  # Fraction of samples used for training each tree\n",
+    "        'colsample_bytree': [0.7, 0.8, 0.9, 1.0],  # Fraction of features used for training each tree\n",
+    "        'gamma': [0, 0.1, 0.2, 0.3],  # Minimum loss reduction required to make a further partition\n",
+    "        'reg_alpha': [0, 0.01, 0.1],  # L1 regularization\n",
+    "        'reg_lambda': [0, 0.1, 1.0]  # L2 regularization\n",
     "    }\n",
-    "    grid_search = GridSearchCV(estimator=xgb_model,\n",
-    "                           param_grid=param_grid,\n",
-    "                           cv=3,  # Number of folds for cross-validation\n",
-    "                           scoring='neg_mean_squared_error',  # Scoring metric for regression\n",
-    "                           verbose=1,  # Show detailed output\n",
-    "                           n_jobs=-1)  # Use all CPU cores for faster computation\n",
+    "\n",
+    "    # Create the RandomizedSearchCV instance\n",
+    "    randomized_search = RandomizedSearchCV(\n",
+    "        estimator=xgb_model,\n",
+    "        param_distributions=param_dist,\n",
+    "        n_iter=10,  # Number of random parameter combinations to test\n",
+    "        cv=3,  # Number of folds for cross-validation\n",
+    "        scoring='neg_mean_squared_error',  # Scoring metric for regression\n",
+    "        verbose=1,  # Show detailed output\n",
+    "        n_jobs=-1,  # Use all CPU cores for faster computation\n",
+    "        random_state=42  # For reproducibility\n",
+    "    )\n",
+    "\n",
+    "    # Fit the randomized search to the data\n",
+    "    randomized_search.fit(X_train_scaled, y_train)\n",
+    "\n",
     "    # Get the best parameters and the corresponding score\n",
-    "    grid_search.fit(X_train_scaled, y_train)\n",
-    "    best_params = grid_search.best_params_\n",
-    "    best_score = grid_search.best_score_\n",
+    "    best_params = randomized_search.best_params_\n",
+    "    best_score = randomized_search.best_score_\n",
     "\n",
     "    print(f\"Best Parameters: {best_params}\")\n",
     "    print(f\"Best Cross-Validation Score (neg_mean_squared_error): {best_score}\")\n",
+    "\n",
     "    # Get the best estimator (model with the best parameters)\n",
-    "    best_model = grid_search.best_estimator_\n",
+    "    best_model = randomized_search.best_estimator_\n",
     "\n",
     "    # Now you can use this model for predictions on the test set\n",
     "    predictions = best_model.predict(X_test_scaled)\n",
     "    print(predictions)\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -258,7 +275,7 @@
    ],
    "source": [
     "# BTC best metrics using GridSearchCV \n",
-    "grid_search(X_train_btc, X_test_btc, y_train_btc, y_test_btc)"
+    "randomized_search(X_train_btc, X_test_btc, y_train_btc, y_test_btc)"
    ]
   },
   {
