fix: edit randomized search

--- a/crypto/RF_visualisations.ipynb
+++ b/crypto/RF_visualisations.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
   },
@@ -99,6 +100,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randomized_search(X_train, X_test, y_train):\n",
+    "    # Define the hyperparameter space\n",
+    "    param_dist = {\n",
+    "        'n_estimators': np.arange(50, 500, 50),\n",
+    "        'max_depth': [None, 10, 20, 30, 40, 50],\n",
+    "        'min_samples_split': [2, 5, 10],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "        'max_features': ['sqrt', 'log2', None]\n",
+    "    }\n",
+    "\n",
+    "    # Define the model\n",
+    "    rf = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "    # Set up RandomizedSearchCV\n",
+    "    random_search = RandomizedSearchCV(\n",
+    "        estimator=rf, \n",
+    "        param_distributions=param_dist,\n",
+    "        n_iter=20,  # Number of different random combinations to try\n",
+    "        cv=5,       # 5-fold cross-validation\n",
+    "        random_state=42,\n",
+    "        n_jobs=-1   # Use all available processors\n",
+    "    )\n",
+    "\n",
+    "    # Fit the model\n",
+    "    random_search.fit(X_train, y_train)\n",
+    "\n",
+    "    # Best parameters and best score\n",
+    "    print(\"Best Parameters:\", random_search.best_params_)\n",
+    "    print(\"Best Score:\", random_search.best_score_)\n",
+    "\n",
+    "    best_model = random_search.best_estimator_\n",
+    "    predictions = best_model.predict(X_test)\n",
+    "    print(predictions)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +273,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/linyan/anaconda3/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:700: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'n_estimators': 350, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'max_depth': None}\n",
+      "Best Score: 0.99305495930211\n",
+      "[96903.30914286 96911.02228571 96894.02574286 ... 90130.12445714\n",
+      " 90134.48497143 90129.3416    ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomized_search(X_train_btc, X_test_btc, y_train_btc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Plotting visualisations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
