updated 1m stock data with indicators

--- a/stock/technical_indicator.ipynb
+++ b/stock/technical_indicator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,8 @@
     "import numpy as np\n",
     "\n",
     "# Load the one-minute stock prices CSV file (adjust the path as needed)\n",
-    "df = pd.read_csv('../1min_stock_prices.csv')\n",
+    "file_name = \"stock_prices_1m\"\n",
+    "df = pd.read_csv(f'{file_name}.csv')\n",
     "\n",
     "# If a Date column exists, parse it as datetime and sort by time\n",
     "if 'Date' in df.columns:\n",
@@ -133,7 +134,7 @@
     "print(df.tail())\n",
     "\n",
     "# Optionally, save the results to a new CSV file\n",
-    "# df.to_csv('1min_stock_prices_with_indicators.csv', index=False)\n",
+    "df.to_csv(f'file_name_with_indicators.csv', index=False)\n",
     "\n"
    ]
   }
