updated technical indicators

--- a/stock/technical_indicator.ipynb
+++ b/stock/technical_indicator.ipynb
@@ -2,33 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   datetime      Open      High       Low     Close   Volume  \\\n",
-      "212194  2025-03-01 00:55:00  293.6900  293.8000  293.5000  293.8000   2423.0   \n",
-      "212195  2025-03-01 00:56:00  293.8100  294.1800  293.8001  294.1365  12443.0   \n",
-      "212196  2025-03-01 00:57:00  294.1365  294.1365  293.9152  294.1187   5124.0   \n",
-      "212197  2025-03-01 00:58:00  294.1200  294.1800  294.0500  294.1507   5991.0   \n",
-      "212198  2025-03-01 00:59:00  294.1600  294.4500  294.1600  294.4000  17177.0   \n",
+      "                        Datetime        Open        High         Low  \\\n",
+      "13645  2025-03-12 19:59:00+00:00  167.169998  167.270004  167.050003   \n",
+      "13646  2025-03-12 19:59:00+00:00  619.739990  619.919983  619.320007   \n",
+      "13647  2025-03-12 19:59:00+00:00  383.369995  383.609985  383.250000   \n",
+      "13648  2025-03-12 19:59:00+00:00  115.730003  115.930000  115.669998   \n",
+      "13649  2025-03-12 19:59:00+00:00  247.865005  248.279999  247.779999   \n",
       "\n",
-      "       Ticker       EMA12       EMA26      MACD  ...        RSV   K   D   J  \\\n",
-      "212194   TSLA  293.742630  293.641312  0.101318  ...  76.923077 NaN NaN NaN   \n",
-      "212195   TSLA  293.803225  293.677992  0.125233  ...  93.602941 NaN NaN NaN   \n",
-      "212196   TSLA  293.851760  293.710637  0.141122  ...  90.985294 NaN NaN NaN   \n",
-      "212197   TSLA  293.897751  293.743235  0.154516  ...  95.691176 NaN NaN NaN   \n",
-      "212198   TSLA  293.975020  293.791884  0.183136  ...  94.736842 NaN NaN NaN   \n",
+      "            Close   Volume Ticker       EMA12       EMA26       MACD  ...  \\\n",
+      "13645  167.080002   445690  GOOGL  244.126724  261.545185 -17.418461  ...   \n",
+      "13646  619.340027   157299   META  301.851848  288.048507  13.803341  ...   \n",
+      "13647  383.279999   457654   MSFT  314.379255  295.102692  19.276564  ...   \n",
+      "13648  115.739998  3543537   NVDA  283.819370  281.816566   2.002804  ...   \n",
+      "13649  248.279999  1301638   TSLA  278.351774  279.332376  -0.980602  ...   \n",
       "\n",
-      "             OSC    BOLL_Mid  BOLL_STD  BOLL_Upper  BOLL_Lower      BIAS  \n",
-      "212194 -0.007778  293.711425  0.101037  293.913499  293.509351  0.005106  \n",
-      "212195 -0.003471  293.735750  0.137466  294.010683  293.460817  0.104511  \n",
-      "212196  0.012819  293.760185  0.159369  294.078922  293.441448  0.084902  \n",
-      "212197  0.028153  293.784220  0.179968  294.144157  293.424283  0.072481  \n",
-      "212198  0.057693  293.819220  0.225129  294.269478  293.368962  0.120395  \n",
+      "             RSV          K          D          J        OSC    BOLL_Mid  \\\n",
+      "13645  10.186838  18.991540  25.577903   5.818815 -25.264807  261.484995   \n",
+      "13646  99.884975  45.956019  32.370608  73.126839  -1.188711  273.276996   \n",
+      "13647  53.066245  48.326094  37.689103  69.600075   1.655437  286.648501   \n",
+      "13648   0.013882  32.222023  35.866743  24.932583  -3.237624  280.049001   \n",
+      "13649  26.298464  30.247504  33.993663  22.755184  13.755508  281.604501   \n",
+      "\n",
+      "         BOLL_STD  BOLL_Upper  BOLL_Lower        BIAS  \n",
+      "13645  146.863591  555.212177  -32.242188  -24.618762  \n",
+      "13646  165.465994  604.208984  -57.654993  137.317757  \n",
+      "13647  162.859697  612.367895  -39.070893   25.433211  \n",
+      "13648  167.137878  614.324757  -54.226755  -59.181084  \n",
+      "13649  166.665982  614.936466  -51.727464  -14.021045  \n",
       "\n",
       "[5 rows x 25 columns]\n"
      ]
@@ -134,7 +141,7 @@
     "print(df.tail())\n",
     "\n",
     "# Optionally, save the results to a new CSV file\n",
-    "df.to_csv(f'file_name_with_indicators.csv', index=False)\n",
+    "df.to_csv(f'{file_name}_with_indicators.csv', index=False)\n",
     "\n"
    ]
   }
@@ -155,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
