cleaned up directory and updated scripts

--- a/stock/technical_indicator.ipynb
+++ b/stock/technical_indicator.ipynb
@@ -2,40 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                        Datetime        Open        High         Low  \\\n",
-      "13645  2025-03-12 19:59:00+00:00  167.169998  167.270004  167.050003   \n",
-      "13646  2025-03-12 19:59:00+00:00  619.739990  619.919983  619.320007   \n",
-      "13647  2025-03-12 19:59:00+00:00  383.369995  383.609985  383.250000   \n",
-      "13648  2025-03-12 19:59:00+00:00  115.730003  115.930000  115.669998   \n",
-      "13649  2025-03-12 19:59:00+00:00  247.865005  248.279999  247.779999   \n",
+      "                       Datetime        Open        High         Low  \\\n",
+      "7373  2025-03-14 16:45:00+00:00  165.130005  165.345001  165.070007   \n",
+      "7374  2025-03-14 16:45:00+00:00  606.229980  606.640015  606.000000   \n",
+      "7375  2025-03-14 16:45:00+00:00  387.045013  387.549286  386.910004   \n",
+      "7376  2025-03-14 16:45:00+00:00  121.035004  121.129997  120.809998   \n",
+      "7377  2025-03-14 16:45:00+00:00  248.587204  248.727600  247.929993   \n",
       "\n",
-      "            Close   Volume Ticker       EMA12       EMA26       MACD  ...  \\\n",
-      "13645  167.080002   445690  GOOGL  244.126724  261.545185 -17.418461  ...   \n",
-      "13646  619.340027   157299   META  301.851848  288.048507  13.803341  ...   \n",
-      "13647  383.279999   457654   MSFT  314.379255  295.102692  19.276564  ...   \n",
-      "13648  115.739998  3543537   NVDA  283.819370  281.816566   2.002804  ...   \n",
-      "13649  248.279999  1301638   TSLA  278.351774  279.332376  -0.980602  ...   \n",
+      "           Close   Volume Ticker       EMA12       EMA26       MACD  ...  \\\n",
+      "7373  165.345001   179078  GOOGL  242.731984  259.863374 -17.131390  ...   \n",
+      "7374  606.609985    72257   META  298.713215  285.548308  13.164907  ...   \n",
+      "7375  387.549286    95106   MSFT  312.380303  293.103936  19.276367  ...   \n",
+      "7376  121.129997  2081392   NVDA  282.957179  280.365126   2.592053  ...   \n",
+      "7377  248.359207   628401   TSLA  277.634414  277.994317  -0.359903  ...   \n",
       "\n",
-      "             RSV          K          D          J        OSC    BOLL_Mid  \\\n",
-      "13645  10.186838  18.991540  25.577903   5.818815 -25.264807  261.484995   \n",
-      "13646  99.884975  45.956019  32.370608  73.126839  -1.188711  273.276996   \n",
-      "13647  53.066245  48.326094  37.689103  69.600075   1.655437  286.648501   \n",
-      "13648   0.013882  32.222023  35.866743  24.932583  -3.237624  280.049001   \n",
-      "13649  26.298464  30.247504  33.993663  22.755184  13.755508  281.604501   \n",
+      "            RSV          K          D          J        OSC    BOLL_Mid  \\\n",
+      "7373   9.238873  18.448442  25.282456   4.780414 -24.782853  260.133696   \n",
+      "7374  99.864444  45.587109  32.050674  72.659981  -1.580100  271.139195   \n",
+      "7375  54.874469  48.682896  37.594748  70.859192   1.366312  284.483659   \n",
+      "7376   0.158344  32.508045  35.899180  25.725775  -3.191078  278.185159   \n",
+      "7377  26.322120  30.446070  34.081477  23.175256  13.394915  279.991584   \n",
       "\n",
-      "         BOLL_STD  BOLL_Upper  BOLL_Lower        BIAS  \n",
-      "13645  146.863591  555.212177  -32.242188  -24.618762  \n",
-      "13646  165.465994  604.208984  -57.654993  137.317757  \n",
-      "13647  162.859697  612.367895  -39.070893   25.433211  \n",
-      "13648  167.137878  614.324757  -54.226755  -59.181084  \n",
-      "13649  166.665982  614.936466  -51.727464  -14.021045  \n",
+      "        BOLL_STD  BOLL_Upper  BOLL_Lower        BIAS  \n",
+      "7373  143.489702  547.113101  -26.845709  -25.582284  \n",
+      "7374  161.057616  593.254426  -50.976036  134.408447  \n",
+      "7375  158.976559  602.436778  -33.469459   27.818331  \n",
+      "7376  162.980600  604.146358  -47.776040  -57.038464  \n",
+      "7377  162.410327  604.812239  -44.829070  -13.714904  \n",
       "\n",
       "[5 rows x 25 columns]\n"
      ]
@@ -44,9 +44,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "# Load the one-minute stock prices CSV file (adjust the path as needed)\n",
-    "file_name = \"stock_prices_1m\"\n",
+    "file_name = \"stock_prices_15m\"\n",
     "df = pd.read_csv(f'{file_name}.csv')\n",
     "\n",
     "# If a Date column exists, parse it as datetime and sort by time\n",
@@ -140,8 +141,13 @@
     "# Print the last few rows to check the calculated indicators\n",
     "print(df.tail())\n",
     "\n",
-    "# Optionally, save the results to a new CSV file\n",
-    "df.to_csv(f'{file_name}_with_indicators.csv', index=False)\n",
+    "file_path = f'./preprocessed_data/{file_name}_with_indicators.csv'\n",
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(os.path.dirname(file_path), exist_ok=True)\n",
+    "\n",
+    "# Save the DataFrame to the specified path\n",
+    "df.to_csv(file_path, index=False)\n",
     "\n"
    ]
   }
