add rolling std & avg

--- a/crypto/copy/RNN_Prediction_Technical.ipynb
+++ b/crypto/copy/RNN_Prediction_Technical.ipynb
@@ -813,6 +813,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_trades_df['Rolling_Risk'] = all_trades_df.groupby('Coin')['Actual_Return'].transform(lambda x: x.rolling(window=10).std())\n",
+    "all_trades_df['Rolling_Average'] = all_trades_df.groupby('Coin')['Actual_Return'].transform(lambda x: x.rolling(window=10).mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_trades_df.to_csv(\"returns.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [
