--- a/crypto/copy/RNN_Prediction_Technical.ipynb
+++ b/crypto/copy/RNN_Prediction_Technical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.csv\n",
-      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.csv\n",
-      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.csv\n",
-      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.csv\n"
+      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.csv\n",
+      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.csv\n",
+      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.csv\n",
+      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.csv\n"
      ]
     }
    ],
@@ -950,7 +950,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -964,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
