--- a/crypto/copy/visualization.ipynb
+++ b/crypto/copy/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf"
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -270,10 +271,10 @@
    "source": [
     "# Close Price Trends Facet \n",
     "fig, axes = plt.subplots(1, len(crypto), figsize=(28, 4), sharey=True)\n",
-    "for ax, token, color in zip(axes, crypto, colors):\n",
-    "    df_token = df[df['Coin'] == token]\n",
-    "    ax.plot(df_token.index, df_token['Close'], color=color, linewidth=2)\n",
-    "    ax.set_title(f'{token} Close Price')\n",
+    "for ax, ticker, color in zip(axes, crypto, colors):\n",
+    "    df_ticker = df[df['Coin'] == ticker]\n",
+    "    ax.plot(df_ticker.index, df_ticker['Close'], color=color, linewidth=2)\n",
+    "    ax.set_title(f'{ticker} Close Price')\n",
     "    ax.set_xlabel('Date')\n",
     "    for label in ax.get_xticklabels():\n",
     "        label.set_rotation(30)\n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -323,13 +324,13 @@
     "component_colors = {'trend': 'tab:orange', 'seasonal': 'tab:purple', 'resid': 'tab:gray'}\n",
     "for comp, comp_color in component_colors.items():\n",
     "    fig, axes = plt.subplots(1, len(crypto), figsize=(28, 4))\n",
-    "    for ax, token, color in zip(axes, crypto, colors):\n",
-    "        df_token = df[df['Coin'] == token]\n",
+    "    for ax, ticker, color in zip(axes, crypto, colors):\n",
+    "        df_ticker = df[df['Coin'] == ticker]\n",
     "        # crypto prices fluctuate proportionally with price levels, therefore multiplicative model is used\n",
-    "        result = seasonal_decompose(df_token['Close'], model='multiplicative', period=10080) # 10080 minutes in a week\n",
+    "        result = seasonal_decompose(df_ticker['Close'], model='multiplicative', period=10080) # 10080 minutes in a week\n",
     "        comp_series = getattr(result, comp)\n",
     "        ax.plot(comp_series.index, comp_series, color=comp_color)\n",
-    "        ax.set_title(f'{token} {comp.capitalize()}')\n",
+    "        ax.set_title(f'{ticker} {comp.capitalize()}')\n",
     "        ax.set_xlabel('Date')\n",
     "        for label in ax.get_xticklabels():\n",
     "            label.set_rotation(30)\n",
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -362,10 +363,10 @@
    "source": [
     "# Standard ACF Facet\n",
     "fig, axes = plt.subplots(1, len(crypto), figsize=(28, 4))\n",
-    "for ax, token in zip(axes, crypto):\n",
-    "    df_token = df[df['Coin'] == token]\n",
-    "    plot_acf(df_token['Close'].dropna(), lags=60, ax=ax)\n",
-    "    ax.set_title(f'{token} ACF')\n",
+    "for ax, ticker in zip(axes, crypto):\n",
+    "    df_ticker = df[df['Coin'] == ticker]\n",
+    "    plot_acf(df_ticker['Close'].dropna(), lags=60, ax=ax)\n",
+    "    ax.set_title(f'{ticker} ACF')\n",
     "    for label in ax.get_xticklabels():\n",
     "        label.set_rotation(30)\n",
     "plt.tight_layout()\n",
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -396,14 +397,76 @@
    "source": [
     "# Standard PACF Facet \n",
     "fig, axes = plt.subplots(1, len(crypto), figsize=(28, 4))\n",
-    "for ax, token in zip(axes, crypto):\n",
-    "    df_token = df[df['Coin'] == token]\n",
-    "    plot_pacf(df_token['Close'].dropna(), lags=60, ax=ax)\n",
-    "    ax.set_title(f'{token} PACF')\n",
+    "for ax, ticker in zip(axes, crypto):\n",
+    "    df_ticker = df[df['Coin'] == ticker]\n",
+    "    plot_pacf(df_ticker['Close'].dropna(), lags=60, ax=ax)\n",
+    "    ax.set_title(f'{ticker} PACF')\n",
     "    for label in ax.get_xticklabels():\n",
     "        label.set_rotation(30)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic for BTC: -1.4279, p-value: 0.5688\n",
+      "BTC series is likely non-stationary.\n",
+      "ADF Statistic for ETH: -0.8515, p-value: 0.8035\n",
+      "ETH series is likely non-stationary.\n",
+      "ADF Statistic for SOL: -0.8681, p-value: 0.7983\n",
+      "SOL series is likely non-stationary.\n",
+      "ADF Statistic for XRP: -2.4175, p-value: 0.1369\n",
+      "XRP series is likely non-stationary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stationarity Tests\n",
+    "for ticker in crypto:\n",
+    "    df_ticker = df[df['Coin'] == ticker]\n",
+    "    adf_result = adfuller(df_ticker['Close'].dropna())\n",
+    "    print(f'ADF Statistic for {ticker}: {adf_result[0]:.4f}, p-value: {adf_result[1]:.4f}')\n",
+    "    if adf_result[1] < 0.05:\n",
+    "        print(f\"{ticker} series is likely stationary.\")\n",
+    "    else:\n",
+    "        print(f\"{ticker} series is likely non-stationary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization of continuous technical indicators for each ticker\n",
+    "technical_columns = [col for col in df.columns if col not in ['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'Number of Trades', 'Coin']]\n",
+    "for token, color in zip(crypto, colors):\n",
+    "    df_token = df[df['Coin'] == token]\n",
+    "    n_cols = 5\n",
+    "    n_rows = (len(technical_columns) + n_cols - 1) // n_cols\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(25, n_rows * 3))\n",
+    "    axes = axes.flatten()\n",
+    "\n",
+    "    for i, col in enumerate(technical_columns):\n",
+    "        axes[i].plot(df_token.index, df_token[col], color=color)\n",
+    "        axes[i].set_title(col.replace('_', ' '), fontsize=10)\n",
+    "        axes[i].tick_params(axis='x', rotation=30)\n",
+    "        axes[i].grid(True)\n",
+    "\n",
+    "    # Hide any empty subplots\n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis('off')\n",
+    "\n",
+    "    plt.suptitle(f'Continuous Technical Indicators Over Time for {token}', fontsize=16)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   }
  ],
