--- a/crypto/copy/RNN_Prediction_Technical.ipynb
+++ b/crypto/copy/RNN_Prediction_Technical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.csv\n",
-      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.csv\n",
-      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.csv\n",
-      "Extracted: /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.zip → /Users/E0775244/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.csv\n"
+      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_30m_with_indicators.csv\n",
+      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_5m_with_indicators.csv\n",
+      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_1h_with_indicators.csv\n",
+      "Skipping extraction (already exists): /Users/linyan/Desktop/4211-project/crypto/copy/data_with_indicators/crypto_prices_1m_with_indicators.csv\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,94 +333,6 @@
      "output_type": "stream",
      "text": [
       "Processing BTC...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-25 12:34:36.658524: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n",
-      "2025-03-25 12:34:36.659321: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Parameters: {'model__units_2': 50, 'model__units_1': 50, 'model__optimizer': 'adam', 'model__learning_rate': 0.001, 'model__layers': 1, 'model__dropout_rate': 0.5, 'batch_size': 32}\n",
-      "Epoch 1/50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-25 12:34:46.977968: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n",
-      "2025-03-25 12:34:46.978385: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m2938/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - loss: 0.0054 - mae: 0.0459"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-25 12:34:57.609082: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n",
-      "2025-03-25 12:34:57.609447: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_15}}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - loss: 0.0054 - mae: 0.0458 - val_loss: 4.6431e-04 - val_mae: 0.0141 - learning_rate: 0.0010\n",
-      "Epoch 2/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 5.8247e-04 - mae: 0.0166 - val_loss: 4.8041e-04 - val_mae: 0.0147 - learning_rate: 0.0010\n",
-      "Epoch 3/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.8546e-04 - mae: 0.0142 - val_loss: 4.7721e-04 - val_mae: 0.0146 - learning_rate: 0.0010\n",
-      "Epoch 4/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7813e-04 - mae: 0.0140 - val_loss: 4.5618e-04 - val_mae: 0.0139 - learning_rate: 0.0010\n",
-      "Epoch 5/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7319e-04 - mae: 0.0138 - val_loss: 4.5551e-04 - val_mae: 0.0139 - learning_rate: 5.0000e-04\n",
-      "Epoch 6/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7282e-04 - mae: 0.0138 - val_loss: 4.5494e-04 - val_mae: 0.0139 - learning_rate: 5.0000e-04\n",
-      "Epoch 7/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7261e-04 - mae: 0.0138 - val_loss: 4.5470e-04 - val_mae: 0.0138 - learning_rate: 5.0000e-04\n",
-      "Epoch 8/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7187e-04 - mae: 0.0137 - val_loss: 4.5484e-04 - val_mae: 0.0139 - learning_rate: 2.5000e-04\n",
-      "Epoch 9/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7195e-04 - mae: 0.0137 - val_loss: 4.5468e-04 - val_mae: 0.0139 - learning_rate: 2.5000e-04\n",
-      "Epoch 10/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7182e-04 - mae: 0.0137 - val_loss: 4.5490e-04 - val_mae: 0.0139 - learning_rate: 2.5000e-04\n",
-      "Epoch 11/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7152e-04 - mae: 0.0137 - val_loss: 4.5472e-04 - val_mae: 0.0138 - learning_rate: 1.2500e-04\n",
-      "Epoch 12/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7150e-04 - mae: 0.0137 - val_loss: 4.5487e-04 - val_mae: 0.0139 - learning_rate: 1.2500e-04\n",
-      "Epoch 13/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7136e-04 - mae: 0.0137 - val_loss: 4.5499e-04 - val_mae: 0.0139 - learning_rate: 1.2500e-04\n",
-      "Epoch 14/50\n",
-      "\u001b[1m2951/2951\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - loss: 4.7129e-04 - mae: 0.0137 - val_loss: 4.5480e-04 - val_mae: 0.0139 - learning_rate: 6.2500e-05\n",
-      "\u001b[1m 99/738\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m0s\u001b[0m 1ms/step "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-25 12:37:10.495369: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_14}}\n",
-      "2025-03-25 12:37:10.495709: E tensorflow/core/framework/node_def_util.cc:680] NodeDef mentions attribute use_unbounded_threadpool which is not in the op definition: Op<name=MapDataset; signature=input_dataset:variant, other_arguments: -> handle:variant; attr=f:func; attr=Targuments:list(type),min=0; attr=output_types:list(type),min=1; attr=output_shapes:list(shape),min=1; attr=use_inter_op_parallelism:bool,default=true; attr=preserve_cardinality:bool,default=false; attr=force_synchronous:bool,default=false; attr=metadata:string,default=\"\"> This may be expected if your graph generating binary is newer  than this binary. Unknown attributes will be ignored. NodeDef: {{node ParallelMapDatasetV2/_14}}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m738/738\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n"
      ]
     }
    ],
@@ -950,7 +862,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -964,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
